# starfish-cli

./: .travis.yml  AUTHORS.rst  CODE_OF_CONDUCT.md  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  output.jsonl  pyproject.toml  tox.ini
.github/: ISSUE_TEMPLATE.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
src/starfishdata/: __init__.py  cli.py
tests/: __init__.py  test_starfishdata.py
